crates/math-core/tests/snapshots/error_test__global_without_let.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\global x"
---
Error: Found "\global", which may only appear directly before \let or \def.
   ╭─[ <input>:1:9 ]
   │
 1 │ \global x
   │         ┬  
   │         ╰── cannot be used here
───╯
