crates/math-core/tests/snapshots/error_test__incomplete_mathchoice.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\mathchoice{a}{b}"
---
Error: Expected argument but reached end of input.
   ╭─[ <input>:1:18 ]
   │
 1 │ \mathchoice{a}{b}
   │                  │ 
   │                  ╰─ expected an argument here
───╯
