crates/math-core/tests/snapshots/error_test__incomplete_sqrt.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt  "
---
Error: Expected argument but reached end of input.
   ╭─[ <input>:1:8 ]
   │
 1 │ \sqrt
   │        │ 
   │        ╰─ expected an argument here
───╯
