crates/math-core/tests/snapshots/error_test__incomplete_sup.snap
---
source: crates/math-core/tests/error_test.rs
expression: x^
---
Position: 2
ExpectedArgumentGotEOF
