crates/math-core/tests/snapshots/error_test__kern_eoi.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\kern"
---
Error: Expected length with units, found "".
   ╭─[ <input>:1:7 ]
   │
 1 │ x\kern
   │       │ 
   │       ╰─ expected length here
───╯
