crates/math-core/tests/snapshots/error_test__kern_missing_number.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\kern em y"
---
Error: Expected length with units, got "".
   ╭─[ <input>:1:7 ]
   │
 1 │ x\kern em y
   │       │ 
   │       ╰─ expected length here
───╯
