crates/math-core/tests/snapshots/error_test__kern_space_in_number.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\kern1 1em y"
---
Error: Found invalid unit "".
   ╭─[ <input>:1:9 ]
   │
 1 │ x\kern1 1em y
   │         │ 
   │         ╰─ invalid unit here
───╯
