crates/math-core/tests/snapshots/error_test__let_as_argument.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt\\let\\zzz\\alpha"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:6 ]
   │
 1 │ \sqrt\let\zzz\alpha
   │      ──┬─  
   │        ╰─── used as argument
───╯
