crates/math-core/tests/snapshots/error_test__let_nested.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\newcommand{\\zzz}{\\let\\yyy\\alpha}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:19 ]
   │
 1 │ \newcommand{\zzz}{\let\yyy\alpha}
   │                   ──┬─  
   │                     ╰─── used as argument
───╯
