crates/math-core/tests/snapshots/error_test__let_without_source.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\let\\zzz"
---
Error: Expected argument but reached end of input.
   ╭─[ <input>:1:9 ]
   │
 1 │ \let\zzz
   │         │ 
   │         ╰─ expected an argument here
───╯
